# LLM-Serve

./: .gitignore  README.en.md  README.md  README.zh-CN.md  bench.py  bench_serving.py  check_speculative_correctness.py  example.py  pyproject.toml
.github/workflows/: cpu-tests.yml
benchmarks/: README.md  __init__.py  arrivals.py  awq_linear_profile.py  environment.py  linear_profile.py  metrics.py  run_stage4.sh  run_suite.py  runtime.py  schema.py  serve.py  suite.py  workloads.py
benchmarks/results/: README.md  summary.csv  verification.md
benchmarks/suites/: awq-capacity-confirm.json  formal-closed-loop.json  formal-poisson.json  pilot.json  smoke.json
docs/: benchmark-v1-baseline.md  chunked-prefill-stage2.md  env-3090-ubuntu22.md
llmserve/: __init__.py  config.py  llm.py
llmserve/engine/: block_manager.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py  speculative_executor.py
llmserve/layers/: attention.py  embed_head.py  linear.py
llmserve/models/: eagle3.py  qwen3.py
llmserve/quantization/: __init__.py  awq_calibration.py  awq_quality.py  quantize_qwen3.py  qwen3_awq.py
llmserve/speculative/: draft.py  sampling.py  tree.py  tree_kv.py  types.py
llmserve/utils/: loader.py
nanovllm/engine/: llm_engine.py  model_runner.py  scheduler.py  (+1 more)
scripts/: summarize_benchmarks.py
tests/: support.py  test_awq_cuda.py  test_awq_linear_backend.py  test_awq_linear_profile.py  test_awq_quality.py  test_awq_quantizer.py  test_awq_reference.py  test_awq_triton.py  test_bench_serving.py  test_benchmark_core.py  test_benchmark_run_suite.py  test_benchmark_runtime.py  test_benchmark_serve.py  test_benchmark_suite.py  test_block_manager_speculative.py  test_check_speculative_correctness.py  test_config_speculative.py  test_eagle3_cycle.py  test_eagle3_speculator.py  test_eagle3_target_bridge.py  test_eagle3_tree.py  test_eagle3_verify.py  test_linear_profile.py  test_llm_engine_speculative.py  test_model_runner_speculative.py  test_model_runner_tree.py  test_optional_dependencies.py  test_quantize_qwen3_awq_cli.py  test_qwen3_aux_hidden.py  test_qwen3_awq_calibration.py  test_scheduler_speculative.py  test_speculative_sampling.py  test_summarize_benchmarks.py  test_tree_attention.py  test_tree_kv_cache_manager.py
thrustlm/: __init__.py  config.py  llm.py
(+120 files in other folders)
