[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "thrustlm"
version = "0.2.0"
authors = [{ name = "pengfei_he" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a single-GPU LLM inference engine focused on serving systems and runtime behavior"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "flash-attn",
    "xxhash",
]

[project.urls]
Homepage="https://github.com/HGinkgo/ThrustLM"

[tool.setuptools.packages.find]
where = ["."]
include = ["thrustlm*"]
