[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llmserve"
version = "0.3.0"
authors = [{ name = "pengfei_he", email = "pengfei_he@foxmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "A single-GPU LLM inference engine focused on serving systems, scheduling, KV cache management, and speculative decoding experiments."
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    "ninja",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "accelerate>=1.0.0",
    "flash-attn",
    "xxhash",
]

[project.urls]
Homepage="https://github.com/HGinkgo/LLM-Serve"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmserve*", "benchmarks*"]

[tool.setuptools.package-data]
llmserve = ["layers/quantization/csrc/*.cu"]
